<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:background="#000000">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activityTLt">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:weightSum="1"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="75dp"
                android:layout_height="match_parent">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/btn_table"
                    android:id="@+id/button_table"
                    android:background="#ffffff"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/title_show"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/filmname"
                    android:id="@+id/textView"
                    android:layout_weight="2.5"
                    android:textColor="#ffffff"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="71dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:id="@+id/button_start"
                    android:layout_gravity="right"
                    android:textColor="#000000"
                    android:background="@android:color/white"
                    android:clickable="true"
                    android:enabled="true"
                    android:longClickable="true"
                    android:layout_marginRight="5dp" />

                <Chronometer
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/chr"
                    android:layout_weight="2.5"
                    android:textColor="#ffffff"
                    android:gravity="center|top"
                    android:text="@string/nonetime" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#ffffff">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cam1_edit"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:background="#000000"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/cam1"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cam2_edit"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:background="#000000"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/cam2"
                    android:id="@+id/textView3"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cam3_edit"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:background="#000000"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/cam3"
                    android:id="@+id/textView4"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="#ffffff">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/scene_edit"
                    android:background="#000000"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:text="-"
                    android:inputType="text"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/scene"
                    android:id="@+id/textView9"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/shot_edit"
                    android:background="#000000"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:text="-"
                    android:inputType="text"
                    android:textSize="20dp"
                    android:clickable="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/shot"
                    android:id="@+id/textView10"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/def_take"
                    android:id="@+id/take_show"
                    android:background="#000000"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_gravity="center"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:textSize="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/take"
                    android:id="@+id/textView12"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#ffffff">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/rec1_edit"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:background="#000000"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/rec1"
                    android:id="@+id/textView5"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/rec2_edit"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:background="#000000"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/rec2"
                    android:id="@+id/textView6"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/rec3_edit"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:background="#000000"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/rec3"
                    android:id="@+id/textView7"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:inputType="textPersonName"
                    android:text="Валентин Иванов"
                    android:ems="10"
                    android:id="@+id/director_edit"
                    android:layout_weight="1"
                    android:textColor="#ffffff"
                    android:singleLine="true"
                    android:gravity="bottom" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/director"
                    android:id="@+id/textView8"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/date_show"
                android:textColor="#ffffff"
                android:layout_gravity="bottom|right"
                android:editable="false"
                android:enabled="false"
                android:gravity="right" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="#000000"
        android:id="@+id/chooseS">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#ffffff">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/slistView"
                android:layout_weight="1"
                android:layout_margin="5dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="#ffffff">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addEditText"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Добавить"
                    android:id="@+id/textView11"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="5dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Создать"
                    android:id="@+id/btnAdd"
                    android:layout_gravity="bottom|right"
                    android:gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="5dp" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</RelativeLayout>
